src/pj/poco/test/neg/NSTRUC05.POC
/* This tests for struct keyword used where it shouldn't be */
#pragma poco echo "expect>malformed name for struct/union/enum..."

main()
{
int struct;

puts("This shouldn't compile");
}
